# toolkit

./: Cargo.toml  LICENSE.md  MIT LICENSE.md  README.md
src/: lib.rs
src/errorsx/: mod.rs
src/stringsx/: case.rs  coalesce.rs  mod.rs  split.rs  truncate.rs
src/uuidx/: mod.rs
