[package]
name = "toolkit"
version = "0.1.0"
authors = ["Revanth <revanthshalonraj@gmail.com>"]
license = "Apache-2.0"
description = "A toolkit for the Nautilus project"
repository = "https://github.com/revanthshalon/toolkit"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
config = "0.14.1"
